# music-comment

./: .gitignore  README.md  pyproject.toml  requirements.txt
discuss/: 2024-12-31_爬虫方案实施总结.md  2025-01-02_V2版本完成总结.md
docs/: API接口文档.md  产品需求文档(PRD).md  技术设计文档(TDD).md  数据字典.md  文档索引.md
scripts/: run.bat  run.sh
src/: main.py
src/config/: settings.py
src/core/: crypto.py  monitor.py  netease_crawler.py
src/gui/: comment_widget.py  main_window.py
src/models/: comment.py  song_info.py
src/utils/: logger.py
tests/: test_v2_complete.py
